--- a/pom.xml
+++ b/pom.xml
@@ -7,125 +7,105 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
-		<selenium.version>3.141.59</selenium.version>
-		<version.commons-io>2.4</version.commons-io>
-
+	  <selenium.version>3.5.1</selenium.version> 
 	</properties>
+  
+   <repositories>
+     <repository>
+        <snapshots>
+          <enabled>false</enabled>
+        </snapshots>
+        <id>bintray-epam-reportportal</id>
+        <name>bintray</name>
+        <url>http://dl.bintray.com/epam/reportportal</url>
+     </repository>
+</repositories>
 
-	<repositories>
-		<repository>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<id>bintray-epam-reportportal</id>
-			<name>bintray</name>
-			<url>http://dl.bintray.com/epam/reportportal</url>
-		</repository>
-	</repositories>
-
-	<dependencies>
-		<dependency>
+    <dependencies>
+    <dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 			<version>${selenium.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.2.3</version>
-		</dependency>
-		<dependency>
-			<groupId>com.epam.reportportal</groupId>
-			<artifactId>logger-java-logback</artifactId>
-			<version>5.0.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>6.11</version>
-		</dependency>
+    <dependency>
+    <groupId>ch.qos.logback</groupId>
+    <artifactId>logback-classic</artifactId>
+    <version>1.2.3</version>
+</dependency>
+    <dependency>
+    <groupId>com.epam.reportportal</groupId>
+    <artifactId>logger-java-logback</artifactId>
+    <version>4.0.0</version>
+</dependency>
+       <dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>6.11</version>
+</dependency>
 
-		<dependency>
-			<groupId>com.epam.reportportal</groupId>
-			<artifactId>agent-java-testng</artifactId>
-			<version>4.2.1</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.epam.reportportal/logger-java-logback -->
-		<dependency>
-			<groupId>com.epam.reportportal</groupId>
-			<artifactId>logger-java-logback</artifactId>
-			<version>5.0.3</version>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.2.3</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.epam.reportportal/logger-java-log4j -->
-		<dependency>
-			<groupId>com.epam.reportportal</groupId>
-			<artifactId>logger-java-log4j</artifactId>
-			<version>5.0.3</version>
-		</dependency>
+        <dependency>
+    <groupId>com.epam.reportportal</groupId>
+    <artifactId>agent-java-testng</artifactId>
+    <version>4.2.1</version>
+</dependency>
+<dependency>
+    <groupId>com.epam.reportportal</groupId>
+    <artifactId>logger-java-logback</artifactId>
+    <version>5.0.3</version>
+</dependency>
+<dependency>
+    <groupId>ch.qos.logback</groupId>
+    <artifactId>logback-classic</artifactId>
+    <version>1.2.3</version>
+</dependency>
+<dependency>
+    <groupId>com.epam.reportportal</groupId>
+    <artifactId>logger-java-log4j</artifactId>
+    <version>5.0.3</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-api</artifactId>
+    <version>2.10.0</version>
+</dependency>
 
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-api</artifactId>
-			<version>2.10.0</version>
-		</dependency>
+<dependency>
+     <groupId>org.apache.logging.log4j</groupId>
+     <artifactId>log4j-core</artifactId>
+     <version>2.10.0</version>
+</dependency>
+  </dependencies>
 
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<version>2.10.0</version>
-		</dependency>
-		<dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>${version.commons-io}</version>
-        </dependency>
-	</dependencies>
+<build>
+<plugins>
+   <plugin>
+       <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-surefire-plugin</artifactId>
+           <version>2.16</version>
+              <configuration>
+                <suiteXmlFiles>
+                  <suiteXmlFilexmlFile>testng.xml</suiteXmlFilexmlFile>
+                </suiteXmlFiles>
+                <properties>
+                  <property>
+                    <name>usedefaultlisteners</name> <!-- disabling default listeners is optional -->
+                    <value>false</value>
+                  </property>
+                </properties>
+               </configuration>
+    </plugin>
+    <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+     <artifactId>maven-compiler-plugin</artifactId>
+     <version>3.0</version>
+     <configuration>
+       <source>1.8</source>
+       <target>1.8</target>
+      </configuration>
+</plugin>
+</plugins>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.16</version>
-				<configuration>
-					<suiteXmlFiles>
-						<suiteXmlFilexmlFile>maven.xml</suiteXmlFilexmlFile>
-					</suiteXmlFiles>
-					<properties>
-						<property>
-							<name>usedefaultlisteners</name> <!-- disabling default listeners is optional -->
-							<value>false</value>
-						</property>
-					</properties>
-					<suiteXmlFiles>
-						<suiteXmlFilexmlFile>${Suite_Name}</suiteXmlFilexmlFile>
-					</suiteXmlFiles>
-					<properties>
-						<property>
-							<name>usedefaultlisteners</name> <!-- disabling default listeners is optional -->
-							<value>false</value>
-						</property>
-					</properties>
-				</configuration>
-
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-		</plugins>
-
-
-	</build>
+  
+   </build>
 
 </project>
